--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:site" content="@نام_کاربری_شما">
     <meta name="twitter:title" content="عنوان محتوای شما">
     <meta name="twitter:description" content="توضیحات مختصر درباره محتوای شما که در کارت توییتر نمایش داده می‌شود.">
-    <meta name="twitter:image" content="https://username.github.io/repository-name/images/your-image.jpg">
+    <meta name="twitter:image" content="https://github.com/TAwR00T/twitter-card-demo/blob/main/images/Gmuoy1oacAAXWFA.jpg">
     
     <style>
         body {
