--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:site" content="@نام_کاربری_شما">
     <meta name="twitter:title" content="عنوان محتوای شما">
     <meta name="twitter:description" content="توضیحات مختصر درباره محتوای شما که در کارت توییتر نمایش داده می‌شود.">
-    <meta name="twitter:image" content="https://github.com/TAwR00T/twitter-card-demo/blob/main/images/Gmuoy1oacAAXWFA.jpg">
+    <meta name="twitter:image" content="https://tawr00t.github.io/twitter-card-demo/images/Gmuoy1oacAAXWFA.jpg">
     
     <style>
         body {
@@ -83,7 +83,7 @@
         
         <!-- تصویری که کاربر روی آن کلیک می‌کند -->
         <div class="image-container" onclick="openModal()">
-            <img src="images/your-image.jpg" alt="تصویر نمونه">
+            <img src="images/Gmuoy1oacAAXWFA.jpg" alt="تصویر نمونه">
             <p>برای دیدن محتوای بیشتر کلیک کنید</p>
         </div>
     </div>
@@ -93,7 +93,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <h2>عنوان محتوای اضافی</h2>
-            <img src="images/your-image.jpg" alt="تصویر نمونه" style="max-width: 100%;">
+            <img src="images/Gmuoy1oacAAXWFA.jpg" alt="تصویر نمونه" style="max-width: 100%;">
             <div class="additional-content">
                 <h3>زیرعنوان اول</h3>
                 <p>متن طولانی اول که زیر تصویر نمایش داده می‌شود. این متن می‌تواند شامل توضیحات مفصل درباره موضوع باشد.</p>
